kim.log
  CHK     include/config/kernel.release
  CHK     include/generated/uapi/linux/version.h
  UPD     include/config/kernel.release
  CHK     include/generated/utsrelease.h
  UPD     include/generated/utsrelease.h
  CHK     scripts/mod/devicetable-offsets.h
  CHK     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  CHK     include/generated/asm-offsets.h
  CALL    scripts/checksyscalls.sh
  CHK     include/generated/compile.h
  CC      init/version.o
  CC [M]  drivers/auxdisplay/charlcd.o
  CC      drivers/base/firmware_class.o
  CC [M]  drivers/target/target_core_configfs.o
  CC [M]  drivers/vhost/scsi.o
  CC [M]  drivers/power/supply/test_power.o
  CC [M]  drivers/net/team/team.o
  CC      kernel/sys.o
  CC [M]  drivers/xen/xen-scsiback.o
  CC [M]  net/rxrpc/local_event.o
  CC [M]  drivers/target/tcm_fc/tfc_conf.o
  CC      kernel/module.o
  AR      init/built-in.o
  CC      fs/nova/balloc.o
  CC      fs/nova/bbuild.o
  CC      fs/nova/checksum.o
  CC      fs/nova/dax.o
  CC      fs/nova/dir.o
  CC      fs/nova/file.o
  CC      fs/nova/gc.o
  CC      fs/nova/inode.o
  CC      fs/nova/ioctl.o
  CC      fs/nova/journal.o
  CC      fs/nova/log.o
  CC      fs/nova/mprotect.o
  CC      fs/nova/namei.o
  CC      fs/nova/parity.o
  CC      fs/nova/rebuild.o
  CC      fs/nova/snapshot.o
  CC      fs/nova/stats.o
  CC      fs/nova/super.o
  CC      fs/nova/symlink.o
  CC      fs/nova/sysfs.o
  CC      fs/nova/perf.o
  CC      kernel/trace/trace.o
  CC [M]  drivers/net/ethernet/mellanox/mlx5/core/en_rep.o
In file included from fs/nova/inode.h:9:0,
                 from fs/nova/nova.h:375,
                 from fs/nova/inode.c:26:
fs/nova/inode.c: In function ‘nova_init_inode’:
fs/nova/inode.c:594:27: error: ‘struct nova_inode’ has no member named ‘range_lock_tree’
  range_lock_tree_init(&(pi->range_lock_tree));
                           ^
./include/linux/range_lock.h:109:26: note: in definition of macro ‘range_lock_tree_init’
  __range_lock_tree_init((tree), #tree, &__key);  \
                          ^
  LD [M]  drivers/target/tcm_fc/tcm_fc.o
  LD [M]  net/rxrpc/rxrpc.o
fs/nova/file.c: In function ‘nova_cow_file_write’:
fs/nova/file.c:848:11: warning: unused variable ‘time’ [-Wunused-variable]
  timing_t time;
           ^
  CC [M]  drivers/gpu/drm/i915/i915_gpu_error.o
make[2]: *** [fs/nova/inode.o] Error 1
make[2]: *** Waiting for unfinished jobs....
  AR      drivers/base/built-in.o
  LD [M]  drivers/vhost/vhost_scsi.o
make[1]: *** [fs/nova] Error 2
make: *** [fs] Error 2
make: *** Waiting for unfinished jobs....
  LD [M]  drivers/target/target_core_mod.o
  LD [M]  drivers/net/ethernet/mellanox/mlx5/core/mlx5_core.o
  LD [M]  drivers/gpu/drm/i915/i915.o
  AR      kernel/trace/built-in.o
  AR      kernel/built-in.o
  AR      drivers/built-in.o
